tests/baselines/reference/privateAccessInSubclass1.errors.txt
tests/cases/compiler/privateAccessInSubclass1.ts(7,5): error TS2341: Property 'Base.options' is inaccessible.


==== tests/cases/compiler/privateAccessInSubclass1.ts (1 errors) ====
    class Base {
      private options: any;
    }
    
    class D extends Base {
      myMethod() {
        this.options;
        ~~~~~~~~~~~~
!!! error TS2341: Property 'Base.options' is inaccessible.
      }
    }